static/styles/index.css
body{
	margin: 0;
	padding: 0;
	font-family: 'Spline Sans', serif;
}

nav{
	background-color: #B67171;
}

/* section's backgorund color */

#about-me{
	background-color: #fbf1c7;
}
#skills{
	background-color: #fbf1c7;
}

#projects, #contacts{
	background-color:#eeeeee;
}

/* End of sections background color */

a:hover{
	cursor: pointer;
}
h2{
	font-family: 'PlayFair Display', serif;
	text-align: center;
}

img {
	/* So that no image is overflown */
	width: 100%;
}

.description{
	margin-top: 1rem
}

#about-me .container-fluid{
	margin-left: 1rem;
}

.description p, .project-desc{
	text-align: center;
	font-size: 1.4rem;
	line-height: 1.5;;
}

.pictures{
	width: 30%;
	margin: 1rem;
}

.picture img{
	width: 300px;
	height: 300px;
	border-radius: 50%;
}

.skill-images, .contact{
	margin:0 auto;
	width: 80%;
	padding: 2rem;
}
.skill{
	display: inline-block;
	margin: 0 0.6rem;
}

.skill p{
	text-align: center;
}

.skill img, .contact img{
	width: 130px;
	margin: 0 auto;
	padding-right: 0.3rem;
	padding-left: 0.3rem;
}

#contacts .container-fluid{
	width: 50%;
}
#project1-info, #project2-info{
	display: none;
}

.project-title {
	margin-left: 1rem;
	padding: 1rem
}

.project-desc{
	padding: 2rem;
}

.contact{
	display: inline-block;
	margin-left: 5rem;
}

@media (max-width: 950px){
	.pictures{
		width: 50%;
		margin: 2rem auto;
	}
	.skill img, .contact img{
		width: 100px;
		margin: 0 auto;
	}

}

@media (max-width: 500px){
	.description p, .project-desc{
		text-align: center;
		font-size: 1rem;
		line-height: 1.2;
	}

	.skill p{
		padding-bottom: 2 rem
	}

	.skill, .contact{
		display: block;
		width: 80%;
		margin: 0 auto;
	}
	.skill img, .contact img{
		display: block;
		width: 70px;
		margin: 0 auto;
		padding: 0.3rem;
	}
}

